--- a/index.html
+++ b/index.html
@@ -5,17 +5,64 @@
 	<meta charset="UTF-8">
 	<meta name="author" content="jouw naam">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+
 	
-	<title>Howdy FED2526</title>
+	<title>FED2526</title>
 	
 	<link href="styles/style.css" rel="stylesheet">
+	<script defer src="scripts/script.js"></script> 
 	<link rel="icon" type="image/svg+xml" href="images/favicon.svg">
+
 </head>
 
 <body>
-	<h1>Howdy FED2526</h1>
+<header>
+	<nav>
+		<ul>
+			<li><a href="index.html">home</a></li>
+			<li><a href="menu.html">menu</a></li>
+			<li><a href="stores">stores</a></li>
+			<li><a href="app">app</a></li>
+		</ul>
+	</nav>
+</header>
+<main>
+	<h1>h1 hidden maken</h1>
+<h2>The steak is here</h2>
+<p>Are you ready for our new steak sandwich? Now available
+	worldwide!
+</p>
 
-	<script defer src="scripts/script.js"></script>
+<button>see the menu</button>
+<button>read more</button>
+
+<p>Order ahead, skip the line and get free s*t with the Joe App!
+	The Joe Loyalty App is not just an ordering app, you’ll be able to earn 
+	points with every order, level up through tiers and complete fun, 
+	rewarding challenges along the way.
+</p>
+<h2> Most popular products</h2>
+<p>carousel komt hier</p>
+<button>Full Menu</button>
+<h2>FIND A JOE & THE JUICE <span>NEAR YOU</span></h2>
+
+<button>open in the store locator</button>
+<p>carousel komt hier</p>
+</main>
+<footer>
+	<img src="images/favicon.svg" />
+	<h4>About</h4>
+	<nav>
+		<ul>
+			
+			<li><a href="">Culture</a></li>
+			<li><a href="">Apply for a job</a></li>
+			<li><a href="">Employee login</a></li>
+			<li><a href="">Press kit</a></li>
+		</ul>
+		<p>Follow</p>
+	</nav>
+</footer>
 </body>
 	
 </html>
