--- a/menu.html
+++ b/menu.html
@@ -16,9 +16,14 @@
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Expletus+Sans:ital,wght@0,400..700;1,400..700&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css">
+<link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css"
+    />
 </head>
 
-<body>
+<body class="kleur2epagina">
 <header>
 	<nav>
 		<ul>
@@ -28,87 +33,92 @@
 			<li><a href="app">app</a></li>
 		</ul>
 	</nav>
+	<img src="images/LogoIcoon.svg" alt="logo van joe & the juice" />
 </header>
 <main>
 <h1>Menu</h1>
-<section>
-	<h2>COMBO OFFERS</h2>
-	<p>(06:00am - 11:00am)</p>
-	<h3>Acai Breakfast Combo offer</h3>
-	<img src="images/AcaiBowl.jpg" alt="">
-	<p>Enjoy the new Acai Bowl with a...</p>
-	<p><span>(Was:€14,85)</span> Now: €12,50 </p>
+<section class="comboOffers">
+<h2>COMBO OFFERS</h2>
+<ul>
+  <li>
+    <p class="tijd">(06:00am - 11:00am)</p>
+    <h3>Acai Breakfast Combo offer</h3>
+    <img src="images/AcaiBowl.jpg" alt="">
+    <p>Enjoy the new Acai Bowl with a...</p>
+    <p class="prijs"><span>(Was: €14,85)</span> Now: €12,50 </p>
+  </li>
+  <li>
+    <p class="tijd">(06:00am - 11:00am)</p>
+    <h3>Feel Good Combo</h3>
+    <img src="images/FeelGoodCombo.jpg" alt="">
+    <p>Feel good with Novak Djokovic i...</p>
+    <p class="prijs"><span>(Was: €12,40)</span> Now: €9,10 </p>
+  </li>
+</ul>
 </section>
-<section>
-	<p>(06:00am - 11:00am)</p>
-	<h3>Feel Good Combo</h3>
-	<img src="images/FeelGoodCombo.jpg" alt="">
-	<p>Feel good with Novak Djokovic i...</p>
-	<p><span>(Was:€12,40)</span> Now: €9,10 </p>
-</section>
+
 <h2>HOT PICKS!</h2>
+<ul class="eten-menu">
+  <li>
+    <h3>The Steak</h3>
+    <img src="images/TheSteak.jpg" alt="">
+    <p>Joe's Classic Bread, Steak, Gra....</p>
+    <p class="prijs">€10,90</p>
+  </li>
+  <li>
+    <h3>JOE'S Overnight Oats</h3>
+    <img src="images/OvernightOats.jpg" alt="">
+    <p>Overnight Oats, Berry Compote....</p>
+    <p class="prijs">€5,25</p>
+  </li>
+  <li>
+    <h3>Feel Good with Nova...</h3>
+    <img src="images/FeelGoodJuice.jpg" alt="">
+    <p>Carrot, Turmeric, Ginger, Lemo....</p>
+    <p class="prijs">€9,10</p>
+  </li>
+  <li>
+    <h3>Beets & Berries</h3>
+    <img src="images/BeetsandBerries.jpg" alt="">
+    <p>Strawberries, Beetroot Powder....</p>
+    <p class="prijs">€9,10</p>
+  </li>
+  <li>
+    <h3>Cappuccino</h3>
+    <img src="images/Cappuccino.jpg" alt="">
+    <p>Espresso, Regular Milk</p>
+    <p class="prijs">€5,25</p>
+  </li>
+</ul>
 
-<div>
-	<h3>The Steak</h3>
-	<img src="images/TheSteak.jpg" alt="">
-	<p>Joe's Classic Bread, Steak, Gra....</p>
-	<p>€10,90</p>
-</div>
-
-<div>
-	<h3>JOE'S Overnight Oats</h3>
-	<img src="images/OvernightOats.jpg" alt="">
-	<p>Overnight Oats, Berry Compote....</p>
-	<p>€5,25</p>
-</div>
-<div>
-	<h3>Feel Good with Nova...</h3>
-	<img src="images/FeelGoodJuice.jpg" alt="">
-	<p>Carrot, Turmeric, Ginger, Lemo....</p>
-	<p>€9,10</p>
-</div>
-
-<div>
-	<h3>Beets & Berries</h3>
-	<img src="images/BeetsandBerries.jpg" alt="">
-	<p>Strawberries,, Beetroot Powder....</p>
-	<p>€9,10</p>
-</div>
-
-<div>
-	<h3>Cappuccino</h3>
-	<img src="images/Cappuccino.jpg" alt="">
-	<p>Espresso, Regular Milk</p>
-	<p>€5,25</p>
-</div>
 <h2>SANDWICHES</h2>
-<div>
-	<h3>The Steak</h3>
-	<img src="images/TheSteak.jpg" alt="">
-	<p>Joe's Classic Bread, Steak, Gra...</p>
-	<p>€10,90</p>
-</div>
+<ul class="eten-menu">
+  <li>
+    <h3>The Steak</h3>
+    <img src="images/TheSteak.jpg" alt="">
+    <p>Joe's Classic Bread, Steak, Gra...</p>
+    <p class="prijs">€10,90</p>
+  </li>
+  <li>
+    <h3>JOEs Club</h3>
+    <img src="images/JOEsClub.jpg" alt="">
+    <p>Joe's Classic Bread, Vegan pest...</p>
+    <p class="prijs">€9,10</p>
+  </li>
+  <li>
+    <h3>Avocado</h3>
+    <img src="images/Avocado.jpg" alt="">
+    <p>Vegan Pesto, Joe's Classic Brea...</p>
+    <p class="prijs">€9,10</p>
+  </li>
+  <li>
+    <h3>Tunacado</h3>
+    <img src="images/Tunacado.jpg" alt="">
+    <p>Joe's Classic Bread, Avocado,....</p>
+    <p class="prijs">€9,10</p>
+  </li>
+</ul>
 
-<div>
-	<h3>JOEs Club</h3>
-	<img src="images/JOEsClub.jpg" alt="">
-	<p>Joe's Classic Bread, Vegan pest...</p>
-	<p>€9,10</p>
-</div>
-
-<div>
-	<h3>Avocado</h3>
-	<img src="images/Avocado.jpg" alt="">
-	<p>Vegan Pesto, Joe's Classic Brea...</p>
-	<p>€9,10</p>
-</div>
-
-<div>
-	<h3>Tunacado</h3>
-	<img src="images/Tunacado.jpg" alt="">
-	<p>Joe's Classic Bread, Avocado,....</p>
-	<p>€9,10</p>
-</div>
 
 
 </main>
@@ -167,6 +177,14 @@
 					</ul>
 				</details>
 	</nav>
+
+	<i class="fa-brands fa-square-facebook" style="color: pink"></i>
+      <i class="fa-brands fa-instagram" style="color: pink"></i>
+      <i class="fa-brands fa-square-linkedin" style="color: pink"></i>
+      <a href="#">Policies</a>
+      <a href="#">Smiley Report</a>
+      <a href="#">Do not sell my personal information</a>
+      <p>&#169; 2025 Joe and the Juice. All rights reserved</p>
 </footer>
 </body>
 	
