--- a/menu.html
+++ b/menu.html
@@ -44,8 +44,8 @@
       <a class="zwarteknop" href="#">Login</a>
     </header>
     <main>
-
-		<ul>
+		<h1>Menu</h1>
+		<ul class="carousel">
 			<li><a href="#">Combo Offers</a></li>
 			<li><a href="#">Hot Picks!</a></li>
 			<li><a href="#">Sandwiches</a></li>
@@ -53,18 +53,24 @@
 			<li><a href="#">Snack & Treats</a></li>
 			<li><a href="#">Coffee</a></li>
 		</ul>
-      <h1>Menu</h1>
-      <section class="comboOffers">
+		
+		<label><input type="radio" name="color-mode" value="light" checked>light</label>
+        <label><input type="radio" name="color-mode" value="dark">dark</label>
+      
+		<section class="comboOffers">
         <h2>COMBO OFFERS</h2>
         <ul>
+		
           <li>
-            <p class="tijd">(06:00am - 11:00am)</p>
+            <p class="tag">offer</p>
+			<p class="tijd">(06:00am - 11:00am)</p>
             <h3>Acai Breakfast Combo offer</h3>
             <img src="images/AcaiBowl.jpg" alt="" />
             <p>Enjoy the new Acai Bowl with a...</p>
             <p class="prijs"><span>(Was: €14,85)</span> Now: €12,50</p>
           </li>
           <li>
+			<p class="tag">offer</p>
             <p class="tijd">(06:00am - 11:00am)</p>
             <h3>Feel Good Combo</h3>
             <img src="images/FeelGoodCombo.jpg" alt="" />
@@ -77,6 +83,7 @@
       <h2>HOT PICKS!</h2>
       <ul class="eten-menu">
         <li>
+			<p class="tag">premium</p>
           <h3>The Steak</h3>
           <img src="images/TheSteak.jpg" alt="" />
           <p>Joe's Classic Bread, Steak, Gra....</p>
@@ -108,9 +115,12 @@
         </li>
       </ul>
 
-      <h2>SANDWICHES</h2>
-      <ul class="eten-menu" style="background-color: rgb(219, 220, 245);">
+	  <h2>SANDWICHES</h2>
+      
+	  <ul class="sandwiches">
+		
         <li>
+		  <p class="tag">premium</p>
           <h3>The Steak</h3>
           <img src="images/TheSteak.jpg" alt="" />
           <p>Joe's Classic Bread, Steak, Gra...</p>
@@ -138,6 +148,7 @@
     </main>
 
     <footer>
+		<img src="images/LogoFooter.png" alt="JoeJuice logo footer">
       <nav>
         <details>
           <summary>About</summary>
@@ -184,7 +195,6 @@
           </ul>
         </details>
       </nav>
-
       <i class="fa-brands fa-square-facebook" style="color: pink"></i>
       <i class="fa-brands fa-instagram" style="color: pink"></i>
       <i class="fa-brands fa-square-linkedin" style="color: pink"></i>
