--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
           <a class="zwarteknop" href="menu.html">READ MORE</a>
         </div>
 
-		<p id="welkom">klik hier</p>
+		<p id="welkom">CLICK HERE</p>
 		
       
 	</section>
