--- a/index.html
+++ b/index.html
@@ -91,10 +91,11 @@
 
         <a class="zwarteknop">OPEN IN STORE LOCATOR</a>
         <ul class="carousel" >
-			<li class="locatie" ><img src="images/cafeJoeJuice.png" alt="voorkant van het cafe Joe & the Juice">
+			<li class="locatie"><img src="images/cafeJoeJuice.png" alt="voorkant van het cafe Joe & the Juice">
 			<h3>Amstelveen[Amsterdam]</h3>
 			<p>Binnenhof 4A</p>
 			<p>Open 08:00 - 18:00</p>
+			<svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 24 24"><!-- Icon from Sargam Icons by Abhimanyu Rana - https://github.com/planetabhi/sargam-icons/blob/main/LICENSE.txt --><path fill="none" stroke="black" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="10" stroke-width="1.5" d="M16.55 3.084a5.452 5.452 0 0 1 3.852 9.307l-.648.654l-.86.854l-6.852 6.852L5.19 13.9l-.86-.854l-.648-.654a5.453 5.453 0 1 1 7.706-7.712l.654.654l.655-.654a5.45 5.45 0 0 1 3.852-1.595" clip-rule="evenodd"/></svg>
 
 			</li>
 			<li class="locatie">
@@ -102,6 +103,7 @@
 			<h3>Stadionplein 103 [Amsterdam]</h3>
 			<p>8VV5+P3 Amsterdam, Holland</p>
 			<p>Open 07:00 - 19:00</p>
+			<svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 24 24"><!-- Icon from Sargam Icons by Abhimanyu Rana - https://github.com/planetabhi/sargam-icons/blob/main/LICENSE.txt --><path fill="none" stroke="black" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="10" stroke-width="1.5" d="M16.55 3.084a5.452 5.452 0 0 1 3.852 9.307l-.648.654l-.86.854l-6.852 6.852L5.19 13.9l-.86-.854l-.648-.654a5.453 5.453 0 1 1 7.706-7.712l.654.654l.655-.654a5.45 5.45 0 0 1 3.852-1.595" clip-rule="evenodd"/></svg>
 			</li>
 			
 			<li class="locatie">
@@ -109,12 +111,14 @@
 			<h3>Ferdinand Bolstraat [Amsterdam]</h3>
 			<p>Ferdinand Bolstraat 113 H</p>
 			<p>Open 08:00 - 20:00</p>
+			<svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 24 24"><!-- Icon from Sargam Icons by Abhimanyu Rana - https://github.com/planetabhi/sargam-icons/blob/main/LICENSE.txt --><path fill="none" stroke="black" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="10" stroke-width="1.5" d="M16.55 3.084a5.452 5.452 0 0 1 3.852 9.307l-.648.654l-.86.854l-6.852 6.852L5.19 13.9l-.86-.854l-.648-.654a5.453 5.453 0 1 1 7.706-7.712l.654.654l.655-.654a5.45 5.45 0 0 1 3.852-1.595" clip-rule="evenodd"/></svg>
 			</li>
 			<li class="locatie">
 				<img src="images/cafeJoeJuice.png" alt="voorkant van het cafe Joe & the Juice">
 				<h3>Joe Food Truck [NL]</h3>
 			<p>Johannes Verhulststraat</p>
 			<p>Closed</p>
+			<svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 24 24"><!-- Icon from Sargam Icons by Abhimanyu Rana - https://github.com/planetabhi/sargam-icons/blob/main/LICENSE.txt --><path fill="none" stroke="black" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="10" stroke-width="1.5" d="M16.55 3.084a5.452 5.452 0 0 1 3.852 9.307l-.648.654l-.86.854l-6.852 6.852L5.19 13.9l-.86-.854l-.648-.654a5.453 5.453 0 1 1 7.706-7.712l.654.654l.655-.654a5.45 5.45 0 0 1 3.852-1.595" clip-rule="evenodd"/></svg>
 			</li>
 		</ul>
       </section>
@@ -168,9 +172,9 @@
           </ul>
         </details>
       </nav>
-      <i class="fa-brands fa-square-facebook" style="color: pink"></i>
-      <i class="fa-brands fa-instagram" style="color: pink"></i>
-      <i class="fa-brands fa-square-linkedin" style="color: pink"></i>
+      <a href="#"></a><i class="fa-brands fa-square-facebook" style="color: pink"></i></a>
+      <a href="#"></a><i class="fa-brands fa-instagram" style="color: pink"></i></a>
+      <a href="#"></a><i class="fa-brands fa-square-linkedin" style="color: pink"></i></a>
       <a href="#">Policies</a>
       <a href="#">Smiley Report</a>
       <a href="#">Do not sell my personal information</a>
