--- a/menu.html
+++ b/menu.html
@@ -40,10 +40,12 @@
         </ul>
       </nav>
 	  </details>
-      <img src="images/LogoIcoon.svg" alt="logo van joe & the juice" />
-      <a class="zwarteknop" href="#">Login</a>
+      <img id="logo" src="images/LogoIcoon.svg" alt="logo van joe & the juice" />
+      <audio id="geluid" src="audio/geluid1.mp3"></audio>
+	  <a class="zwarteknop" href="#">Login</a>
     </header>
     <main>
+		
 		<h1>Menu</h1>
 		<ul class="carousel">
 			<li><a href="#">Combo Offers</a></li>
@@ -54,9 +56,12 @@
 			<li><a href="#">Coffee</a></li>
 		</ul>
 		
-		<label><input type="radio" name="color-mode" value="light" checked>light</label>
-        <label><input type="radio" name="color-mode" value="dark">dark</label>
-      
+		
+		
+		<div class="animatie">
+			<p>Houd ingedrukt</p>
+		</div>
+		
 		<section class="comboOffers">
         <h2>COMBO OFFERS</h2>
         <ul>
