--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 	</section>
       <section>
 		
-        <h3>
+        <h3 class="scrollanimatie">
           Order ahead, skip the line and get free s*t with the
           <span>Joe App! </span>
         </h3>
@@ -108,38 +108,39 @@
 		  
         <a class="zwarteknop" href="menu.html">FULL MENU</a>
       </section>
-      <section class="wittesectie">
+      <section class="locaties">
         <h2>FIND A JOE & THE JUICE <span>NEAR YOU</span></h2>
 
         <a class="zwarteknop">OPEN IN STORE LOCATOR</a>
         <ul class="carousel" >
-			<li class="locatie"><img src="images/cafeJoeJuice.png" alt="voorkant van het cafe Joe & the Juice">
+			<li>
+			<img src="images/cafeJoeJuice.png" alt="voorkant van het cafe Joe & the Juice">
 			<h3>Amstelveen[Amsterdam]</h3>
 			<p>Binnenhof 4A</p>
-			<p>Open 08:00 - 18:00</p>
+			<h4>Open 08:00 - 18:00</h4>
 			<svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 24 24"><!-- Icon from Sargam Icons by Abhimanyu Rana - https://github.com/planetabhi/sargam-icons/blob/main/LICENSE.txt --><path fill="none" stroke="black" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="10" stroke-width="1.5" d="M16.55 3.084a5.452 5.452 0 0 1 3.852 9.307l-.648.654l-.86.854l-6.852 6.852L5.19 13.9l-.86-.854l-.648-.654a5.453 5.453 0 1 1 7.706-7.712l.654.654l.655-.654a5.45 5.45 0 0 1 3.852-1.595" clip-rule="evenodd"/></svg>
-
 			</li>
-			<li class="locatie">
+
+			<li>
 			<img src="images/cafeJoeJuice.png" alt="voorkant van het cafe Joe & the Juice">
 			<h3>Stadionplein 103 [Amsterdam]</h3>
 			<p>8VV5+P3 Amsterdam, Holland</p>
-			<p>Open 07:00 - 19:00</p>
+			<h4>Open 07:00 - 19:00</h4>
 			<svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 24 24"><!-- Icon from Sargam Icons by Abhimanyu Rana - https://github.com/planetabhi/sargam-icons/blob/main/LICENSE.txt --><path fill="none" stroke="black" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="10" stroke-width="1.5" d="M16.55 3.084a5.452 5.452 0 0 1 3.852 9.307l-.648.654l-.86.854l-6.852 6.852L5.19 13.9l-.86-.854l-.648-.654a5.453 5.453 0 1 1 7.706-7.712l.654.654l.655-.654a5.45 5.45 0 0 1 3.852-1.595" clip-rule="evenodd"/></svg>
 			</li>
 			
-			<li class="locatie">
-				<img src="images/cafeJoeJuice.png" alt="voorkant van het cafe Joe & the Juice">
+			<li>
+			<img src="images/cafeJoeJuice.png" alt="voorkant van het cafe Joe & the Juice">
 			<h3>Ferdinand Bolstraat [Amsterdam]</h3>
 			<p>Ferdinand Bolstraat 113 H</p>
-			<p>Open 08:00 - 20:00</p>
+			<h4>Open 08:00 - 20:00</h4>
 			<svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 24 24"><!-- Icon from Sargam Icons by Abhimanyu Rana - https://github.com/planetabhi/sargam-icons/blob/main/LICENSE.txt --><path fill="none" stroke="black" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="10" stroke-width="1.5" d="M16.55 3.084a5.452 5.452 0 0 1 3.852 9.307l-.648.654l-.86.854l-6.852 6.852L5.19 13.9l-.86-.854l-.648-.654a5.453 5.453 0 1 1 7.706-7.712l.654.654l.655-.654a5.45 5.45 0 0 1 3.852-1.595" clip-rule="evenodd"/></svg>
 			</li>
-			<li class="locatie">
-				<img src="images/cafeJoeJuice.png" alt="voorkant van het cafe Joe & the Juice">
-				<h3>Joe Food Truck [NL]</h3>
+			<li>
+			<img src="images/cafeJoeJuice.png" alt="voorkant van het cafe Joe & the Juice">
+			<h3>Joe Food Truck [NL]</h3>
 			<p>Johannes Verhulststraat</p>
-			<p>Closed</p>
+			<h4>Closed</h4>
 			<svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 24 24"><!-- Icon from Sargam Icons by Abhimanyu Rana - https://github.com/planetabhi/sargam-icons/blob/main/LICENSE.txt --><path fill="none" stroke="black" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="10" stroke-width="1.5" d="M16.55 3.084a5.452 5.452 0 0 1 3.852 9.307l-.648.654l-.86.854l-6.852 6.852L5.19 13.9l-.86-.854l-.648-.654a5.453 5.453 0 1 1 7.706-7.712l.654.654l.655-.654a5.45 5.45 0 0 1 3.852-1.595" clip-rule="evenodd"/></svg>
 			</li>
 		</ul>
