--- a/index.html
+++ b/index.html
@@ -1,33 +1,28 @@
 <!DOCTYPE html>
 <html lang="nl">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="author" content="jouw naam" />
+    <meta charset="UTF-8"/>
+    <meta name="author" content="minke" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
     <title>FED2526</title>
 
-    <link href="styles/style.css" rel="stylesheet" />
+    <link href="styles/style.css" rel="stylesheet"/>
     <script defer src="scripts/script.js"></script>
     <link rel="icon" type="image/svg+xml" href="images/favicon.svg" />
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Expletus+Sans:ital,wght@0,400..700;1,400..700&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
-      rel="stylesheet"
-    />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css"
-    />
+    <link href="https://fonts.googleapis.com/css2?family=Expletus+Sans:ital,wght@0,400..700;1,400..700&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css" />
   </head>
 
   <body>
     <header>
-		<details>
-		<summary><img src="images/hamburgermenu.svg" alt=""></summary>
+		<button><img src="images/hamburgermenu.svg" alt="icoon hamburgermenu"></button>
       <nav>
+	
         <ul>
           <li><a href="index.html">home</a></li>
           <li><a href="menu.html">menu</a></li>
@@ -35,8 +30,8 @@
           <li><a href="app">app</a></li>
         </ul>
       </nav>
-	</details>
-       <img id="logo" src="images/LogoIcoon.svg" alt="logo van joe & the juice" />
+
+       <img id="logo" src="images/LogoIcoon.svg" alt="logo joe & the juice">
 	  <audio id="geluid" src="audio/geluid1.mp3"></audio>
 	  <a class="zwarteknop" href="#">Login</a>
 	
@@ -46,7 +41,7 @@
       <section class="Achtergrondplaatje">
         <h1>h1 hidden maken</h1>
 		
-        <h2 class="eersteH2">THE STEAK IS HERE</h2>
+        <h2>THE STEAK IS HERE</h2>
         <p>
           Are you ready for our new steak sandwich? Now available worldwide!
         </p>
