--- a/menu.html
+++ b/menu.html
@@ -2,7 +2,7 @@
 <html lang="nl">
   <head>
     <meta charset="UTF-8" />
-    <meta name="author" content="jouw naam" />
+    <meta name="author" content="minke" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
     <title>FED2526</title>
@@ -29,9 +29,9 @@
 
   <body class="kleur2epagina">
     <header>
-		<details>
-			<summary><img src="images/hamburgermenu.svg" alt=""></summary>
+		<button><img src="images/hamburgermenu.svg" alt="icoon hamburgermenu"></button>
       <nav>
+	
         <ul>
           <li><a href="index.html">home</a></li>
           <li><a href="menu.html">menu</a></li>
@@ -39,7 +39,6 @@
           <li><a href="app">app</a></li>
         </ul>
       </nav>
-	  </details>
       <img id="logo" src="images/LogoIcoon.svg" alt="logo van joe & the juice" />
       <audio id="geluid" src="audio/geluid1.mp3"></audio>
 	  <a class="zwarteknop" href="#">Login</a>
