--- a/index.html
+++ b/index.html
@@ -14,8 +14,10 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Expletus+Sans:ital,wght@0,400..700;1,400..700&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css"
+    />
   </head>
 
   <body>
@@ -70,6 +72,8 @@
 		
       
 </section>
+
+  <button id="kerstknop">Kerst thema</button>
 
       <section>
         <h2>Most popular products</h2>
@@ -190,9 +194,10 @@
           </ul>
         </details>
       </nav>
-      <a href="#"></a><i class="fa-brands fa-square-facebook" style="color: pink"></i></a>
-      <a href="#"></a><i class="fa-brands fa-instagram" style="color: pink"></i></a>
-      <a href="#"></a><i class="fa-brands fa-square-linkedin" style="color: pink"></i></a>
+      <i class="fa-brands fa-square-facebook" style="color: pink"></i>
+     <i class="fa-brands fa-instagram" style="color: pink"></i>
+    <i class="fa-brands fa-square-linkedin" style="color: pink"></i>
+      
       <a href="#">Policies</a>
       <a href="#">Smiley Report</a>
       <a href="#">Do not sell my personal information</a>
