--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     </header>
     <main>
       <section class="Achtergrondplaatje">
-        <h1>h1 hidden maken</h1>
+        <h1 class="visually-hidden">Joe & the Juice website</h1>
 		
         <h2>THE STEAK IS HERE</h2>
         <p>
