--- a/menu.html
+++ b/menu.html
@@ -42,7 +42,7 @@
     </header>
     <main>
 		
-		<h1>Menu</h1>
+		<h1 class="visually-hidden">Menukaart</h1>
 		<ul class="carousel">
 			<li><a href="#">Combo Offers</a></li>
 			<li><a href="#">Hot Picks!</a></li>
